# portifolio

./: 404.html  Portifolio.py  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html
Certificados/: text
Cursos Ministrados/p7-LinuxDocker/: index.html
Cursos Ministrados/p7-Streamlit/: index.html
Paginas/: magalu.py  nba.py  pagina_inicial.py  pib.py  ps4.py  unicornio.py
Projeto 1/: Projeto1.ipynb
Projeto 2/: Projeto2.ipynb
Projeto 3/: Projeto3.ipynb
Projeto 4/: Projeto4.ipynb
Projetos/p-7.1-DataGlowUP25/: index.html
Projetos/p-7.2-DataQuality/: index.html
Projetos/p-7.2-Deputados/: index.html
Projetos/p-7.3-Deputados/: index.html
Projetos/p-7.3-DockerStreamlit/: index.html
Projetos/p-7.4-DuckDBePandas/: index.html
Projetos/p-7.5-Deputados/: index.html
Projetos/p6-1-DataGlowUP25/: index.html
docs/: index.md  p2-sobre.md  p3-academica.md  p4-experiencia.md  p5-habilidades.md  p6-youtube.md  p7-Curso.md  p7-Udemy.md  pn-contato.md  sobre.md
docs/Cursos Ministrados/: p7-LinuxDocker.md  p7-Streamlit.md
docs/Projetos/: p-7.1-DataGlowUP25.md  p-7.2-DataQuality.md  p-7.3-Deputados.md  p-7.3-DockerStreamlit.md  p-7.4-DuckDBePandas.md  p-7.5-Deputados.md  p.7.2-DataQuality.md  p6-1-DataGlowUP25.md
image/: text
p1-index/: index.html
p2-sobre/: index.html
p3-academica/: index.html
p4-experiencia/: index.html
p5-habilidades/: index.html
p6-youtube/: index.html
p7-Curso/: index.html
p7-Udemy/: index.html
pn-contato/: index.html
search/: search_index.json
