[tool.poetry]
name = "portifolio"
version = "0.1.0"
description = ""
authors = ["luhborba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-dracula-theme = "^1.0.7"
pymdown-extensions = "^10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
